# sol

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
bench/: README.md  sol-bench  triage.py
bench/scripts/: spawn_and_churn.json  torture_10min.json
crates/hypr-backend-drm/: Cargo.toml
crates/hypr-backend-drm/src/: lib.rs  presenter.rs  shader.rs
crates/hypr-core/: Cargo.toml
crates/hypr-core/src/: lib.rs
crates/hypr-wayland/: Cargo.toml
crates/hypr-wayland/src/: compositor.rs  globals.rs  lib.rs  render.rs  seat.rs  shm.rs  xdg_shell.rs  xkb.rs
crates/hyprs/: Cargo.toml
crates/hyprs-drm-smoke/: Cargo.toml
crates/hyprs-drm-smoke/src/: main.rs
crates/hyprs-paint/: Cargo.toml
crates/hyprs-paint/src/: main.rs
crates/hyprs-probe/: Cargo.toml
crates/hyprs-probe/src/: main.rs
crates/hyprs/src/: main.rs
crates/sol/: Cargo.toml
crates/sol-backend-drm/: Cargo.toml  build.rs
crates/sol-backend-drm/shaders/: backdrop.frag  blur.frag  frosted.frag  quad.frag  quad.vert  solid.frag
crates/sol-backend-drm/src/: lib.rs  presenter.rs  quad.rs  shader.rs  vk_blur.rs  vk_capture.rs  vk_perf.rs  vk_pipe.rs  vk_stack.rs  vk_swap.rs  vk_texture.rs
crates/sol-core/: Cargo.toml
crates/sol-core/src/: lib.rs
crates/sol-wayland/: Cargo.toml
crates/sol-wayland/src/: compositor.rs  config.rs  cursor.rs  data_device.rs  debug_ctl.rs  ext_workspace.rs  fractional_scale.rs  idle_inhibit.rs  input.rs  layer_shell.rs  lib.rs  linux_dmabuf.rs  output.rs  primary_selection.rs  render.rs  seat.rs  session.rs  shm.rs  subcompositor.rs  viewporter.rs  xdg_decoration.rs  xdg_output.rs  xdg_shell.rs  xkb.rs
crates/sol/src/: main.rs
crates/voidptr/: Cargo.toml
crates/voidptr-backend-drm/: Cargo.toml
crates/voidptr-backend-drm/src/: lib.rs  presenter.rs  quad.rs
crates/voidptr-core/: Cargo.toml
crates/voidptr-core/src/: lib.rs
crates/voidptr-drm-smoke/: Cargo.toml
crates/voidptr-drm-smoke/src/: main.rs
crates/voidptr-paint/: Cargo.toml
crates/voidptr-paint/src/: main.rs
crates/voidptr-probe/: Cargo.toml
crates/voidptr-wayland/: Cargo.toml
crates/voidptr-wayland/src/: compositor.rs  config.rs  cursor.rs  data_device.rs  ext_workspace.rs  fractional_scale.rs  input.rs  layer_shell.rs  lib.rs  linux_dmabuf.rs  output.rs  presentation_time.rs  render.rs  session.rs  shm.rs  subcompositor.rs  viewporter.rs  xdg_output.rs  xdg_shell.rs  xkb.rs
crates/voidptr/src/: main.rs
doc/: how-it-works.md  nvidia-rendering.md
docker/: dev.Dockerfile
