[workspace]
resolver = "2"
members = [
    "crates/hypr-core",
    "crates/hypr-wayland",
    "crates/hypr-backend-drm",
    "crates/hyprs",
    "crates/hyprs-probe",
    "crates/hyprs-paint",
    "crates/hyprs-drm-smoke",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/magniff/hyperland-rs"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
calloop = "0.14"
wayland-server = "0.31"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["server", "client", "staging", "unstable"] }
memmap2 = "0.9"
png = "0.17"
rustix = { version = "0.38", features = ["fs", "mm", "event"] }
drm = "0.14"
gbm = { version = "0.18", default-features = false, features = ["drm-support"] }
khronos-egl = { version = "6", features = ["dynamic"] }
glow = "0.14"
libloading = "0.8"
ctrlc = "3"
input = { version = "0.9", features = ["libinput_1_19"] }
libc = "0.2"

hypr-backend-drm = { path = "crates/hypr-backend-drm" }

hypr-core = { path = "crates/hypr-core" }
hypr-wayland = { path = "crates/hypr-wayland" }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
