[workspace]
resolver = "2"
members = [
    "crates/sol-core",
    "crates/sol-wayland",
    "crates/sol-backend-drm",
    "crates/sol",
]

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/magniff/sol"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
calloop = "0.14"
wayland-server = "0.31"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["server", "client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["server"] }
memmap2 = "0.9"
png = "0.17"
rustix = { version = "0.38", features = ["fs", "mm", "event"] }
drm = "0.14"
gbm = { version = "0.18", default-features = false, features = ["drm-support"] }
khronos-egl = { version = "6", features = ["dynamic"] }
glow = "0.14"
libloading = "0.8"
ctrlc = { version = "3", features = ["termination"] }
input = { version = "0.9", features = ["libinput_1_19"] }
libc = "0.2"
xkbcommon = "0.8"
libseat = "0.2"

sol-backend-drm = { path = "crates/sol-backend-drm" }

sol-core = { path = "crates/sol-core" }
sol-wayland = { path = "crates/sol-wayland" }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
