[workspace]
resolver = "2"
members = [
    "crates/sol-core",
    "crates/sol-wayland",
    "crates/sol-backend-drm",
    "crates/sol",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/magniff/sol"
rust-version = "1.80"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
calloop = "0.14"
wayland-server = "0.31"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["server", "client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["server"] }
memmap2 = "0.9"
png = "0.17"
rustix = { version = "0.38", features = ["fs", "mm", "event"] }
drm = "0.14"
gbm = { version = "0.18", default-features = false, features = ["drm-support"] }
ash = { version = "0.38", default-features = false, features = ["loaded"] }
ctrlc = { version = "3", features = ["termination"] }
input = { version = "0.9", features = ["libinput_1_19"] }
libc = "0.2"
xkbcommon = "0.8"
libseat = "0.2"
# Smithay is being adopted incrementally to replace hand-rolled
# `wayland-server::Dispatch` impls. PR 0 wires the dep; later PRs
# migrate one protocol module at a time. Default features are off
# so each consumer crate opts into exactly the surface area it
# needs (e.g. `sol-wayland` takes `wayland_frontend` today and
# `backend_libinput` / `backend_drm` / `backend_session_libseat`
# in subsequent PRs).
smithay = { version = "0.7", default-features = false }

sol-backend-drm = { path = "crates/sol-backend-drm" }

sol-core = { path = "crates/sol-core" }
sol-wayland = { path = "crates/sol-wayland" }

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1
