[package]
name = "hypr-backend-drm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
drm.workspace = true
gbm.workspace = true
khronos-egl.workspace = true
glow.workspace = true
libloading.workspace = true
rustix.workspace = true
