[package]
name = "hypr-wayland"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
calloop.workspace = true
wayland-server.workspace = true
wayland-protocols = { workspace = true }
memmap2.workspace = true
png.workspace = true
rustix.workspace = true
hypr-core.workspace = true
hypr-backend-drm.workspace = true
