[package]
name = "sol-backend-drm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
drm.workspace = true
gbm.workspace = true
ash.workspace = true
rustix.workspace = true
sol-core.workspace = true
smithay = { workspace = true, features = ["backend_drm"] }
calloop.workspace = true

[build-dependencies]
anyhow.workspace = true
