[package]
name = "sol-wayland"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
calloop.workspace = true
wayland-server.workspace = true
wayland-protocols = { workspace = true }
wayland-protocols-wlr = { workspace = true }
memmap2.workspace = true
png.workspace = true
rustix.workspace = true
sol-core.workspace = true
sol-backend-drm.workspace = true
input.workspace = true
libc.workspace = true
xkbcommon.workspace = true
ctrlc.workspace = true
libseat.workspace = true
smithay = { workspace = true, features = ["wayland_frontend"] }
xcursor = "0.3"
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[features]
# Enables the debug control socket + scriptable command dispatch
# for the `sol-bench` harness. Off in normal release builds; turn
# it on with `cargo build --release --features debug-ctl` for
# benchmarking and regression-testing the compositor end-to-end.
debug-ctl = ["dep:serde", "dep:serde_json"]
