[package]
name = "sol"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sol"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sol-wayland.workspace = true

[features]
# Forwards to sol-wayland — the actual scaffolding lives there.
debug-ctl = ["sol-wayland/debug-ctl"]
