[package]
name = "voidptr-drm-smoke"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "voidptr-drm-smoke"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ctrlc.workspace = true
voidptr-backend-drm.workspace = true
