[package]
name = "voidptr-paint"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "voidptr-paint"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
wayland-client.workspace = true
wayland-protocols = { workspace = true }
rustix.workspace = true
memmap2.workspace = true
