[package]
name = "voidptr-wayland"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
calloop.workspace = true
wayland-server.workspace = true
wayland-protocols = { workspace = true }
memmap2.workspace = true
png.workspace = true
rustix.workspace = true
voidptr-core.workspace = true
voidptr-backend-drm.workspace = true
input.workspace = true
libc.workspace = true
xkbcommon.workspace = true
